styles.css
body {
  min-width: 667px;
}

td.dt-teamDetailsClick {
    cursor: pointer;
}

.border-left {
    border-left: 1px solid rgba(0, 0, 0, 0.3);
}

div.postseasonPosition-GUR,
.postseasonPosition-GUR td {
    background-color: rgba(99,212,113, 0.18) !important;    
}

div.postseasonPosition-AA,
.postseasonPosition-AA td {
    background-color: rgba(255,212,73, 0.4) !important;    
}

div.postseasonPosition-AM,
.postseasonPosition-AM td {
    background-color: rgba(241,80,37, 0.18) !important;    
}

div.postseasonPosition-EUR,
.postseasonPosition-EUR td {
    background-color: rgba(75,136,162, 0.18) !important;    
}

div[class^="postseasonPosition-"] {
    margin-top:.25rem;
    padding:.25rem;
    border-radius: 5px;
}

.invites {
    display: none;
}

.dt-column-title i.bi-question-circle {
    font-size:.75rem;
    vertical-align: text-top;
}

.betaFlag {
    background: #970D00;
    border-radius: 5px;
    color: #fff;
    font-size: .5rem;
    font-weight: 500;
    padding: 2px 5px;
    vertical-align: text-top;
}

.navbar-collapse:not(.collapsing):not(.show) .onlyCollapsed {
    display:none;
}

.teamName {
    line-height: 1.1;
}

.teamLocation {
    font-size: .8em;
}

td.points {
    font-size: .85em;
}

td.teamLogo {
    width: 60px;
}

td {
    vertical-align: middle;
}

#rankingsChart,
#teamChart {
    height: 25rem;
}

.form-floating>.form-select {
    font-size: .95em !important;
    height: 2.5rem !important;
    min-height: 2.5rem !important;
    padding-left: .5rem !important;
    padding-top: 0.75rem !important;
    padding-bottom: 0 !important;
}

.form-floating>label {
    font-size: .9em !important;
    padding: 0.5rem 0.5rem !important;
}

